format codes and fix illustration alignments

--- a/src/app/base/static/assets/css/Play.css
+++ b/src/app/base/static/assets/css/Play.css
@@ -31,3 +31,8 @@
         display: flex;
         flex-flow: row wrap;
       }
+
+
+.status{
+    margin-left: 20px;
+}
